test/expected/explain_ctor_2i++default.out
explain C(int, int) = default
        ^
9: error: "default" can be used only for special member functions and relational operators
